<resources>
    <string name="app_name">Billboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="star_wars_episodio_3_la_venganza_de_los_sith">Star Wars episodio 3: La venganza de los Sith</string>
    <string name="_9_8">9.8</string>
    <string name="harry_potter_y_la_piedra_filosofal">Harry Potter y la Piedra FIlosofal</string>
    <string name="_9_5">9.5</string>
    <string name="billboard">Billboard</string>
    <string name="la_pelicula_se_centra_en_el_personaje_de_anakin_skywalker_quien_esta_siendo_tentado_por_el_lado_oscuro_de_la_fuerza_mientras_el_imperio_galactico_comienza_a_surgir_la_trama_tambien_muestra_la_caida_de_la_republica_galactica_y_el_ascenso_del_emperador_palpatine">La pelicula se centra en el personaje de Anakin Skywalker, quien esta siendo tentado por el Lado Oscuro de la Fuerza mientras el Imperio Galactico comienza a surgir. La trama tambien muestra la caida de la Republica Galactica y el ascenso del Emperador Palpatine.</string>
    <string name="ciencia_ficcion">Ciencia Ficcion</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="calification">Calification</string>
    <string name="submit">SUBMIT</string>
    <string name="qualification">Qualification</string>
    <string name="_category">Category</string>
    <string name="_name">Name</string>
    <string name="_description">Description</string>
</resources>